[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Art/Fonts/Space_Grotesk/static/SpaceGrotesk-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Game/Areas/AreaTemplate.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Areas/ThePond/ThePond.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="ThePond" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="YouAreAtLabel" parent="." index="0"]
text = "You are at 
The Pond"

[node name="TravelButton" parent="ScrollContainer/VBoxContainer" index="0"]
margin_bottom = 48.0

[node name="FishButton" type="Button" parent="ScrollContainer/VBoxContainer" index="1"]
margin_top = 52.0
margin_right = 143.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Fish"

[node name="BountyButton" type="Button" parent="ScrollContainer/VBoxContainer" index="2"]
margin_top = 105.0
margin_right = 143.0
margin_bottom = 153.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Bounties"

[node name="SaveButton" parent="ScrollContainer/VBoxContainer" index="3"]
margin_top = 157.0
[connection signal="pressed" from="ScrollContainer/VBoxContainer/FishButton" to="." method="_on_FishButton_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/BountyButton" to="." method="_on_BountyButton_pressed"]
